2008-06-24  Francois Dumont  <dums@users.sourceforge.net>

	* build/Makefiles/gmake: Cygwin/MinGW upgrade, now build
	without referencing libstdc++.

2008-06-18  Francois Dumont  <dums@users.sourceforge.net>

	* build: configure.bat moved to build folder. lib/Makefile,
	test/unit/Makefile removed from SVN, now generated by configure
	scripts. Under GNU make use include rather than link to
	reference the right make file, link seems not supported by
	Cygwin/MinGW make. Remove default value of STLPORT_DIR,
	already set in internal make files and moreover the absolute
	path generated in the script leads to trouble under Cygwin/MinGW.

	* src/num_get_float.cpp: Use an union to generate double value
	from 64 bits int to avoid gcc type-punned pointer warning.

2008-06-16  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* build/test/unit/gcc.mak: pass runtime pathes as absolute;
	removed LDSEARCH macro, use LDFLAGS instead;

	* Makefile: clean in test/unit too.

2008-06-13  Francois Dumont  <dums@users.sourceforge.net>

	* stlport/stl/_iterator_base.h: Add a funny feature, when
	using both STLport and native STLs it was not possible
	to use std iterators in STLport containers because of the
	missing iterator category that is defined in std:: and
	not in stlport::. So now STLport map std iterator categories
	in stlport ones. Now it is possible to write something like
	that:
	std::string stdstr("std");
	stlport::string stlportstr("stlport and ");
	stlportstr.append(stdstr.begin(), stdstr.end());
	However the other side is not supported except when STLport
	iterators are simply pointers.

2008-06-05  Francois Dumont  <dums@users.sourceforge.net>

	* src/num_get_float.cpp: Remove useless skip of white
	space at begining of buffer in _Stl_string_to_double function.
	__read_float, the function that generate that buffer do not
	put white space at the first place.

	* stlport/stl/_new.h, _range_errors.c: Remove unused